# CD2-BE

./: README.md
pbl2/: Dockerfile  alembic 명령어.txt  alembic.ini  docker-compose-backend.yaml  pyproject.toml  처음 서버 on.txt
pbl2/api/: config.py  database.py  dependencies.py  main.py
pbl2/api/core/: auth.py  security.py
pbl2/api/domain/: admin_service.py  ai_service.py  cleanup_service.py  language_service.py  session_service.py  user_service.py
pbl2/api/models/: ORM.py  file_upload.py
pbl2/api/routers/: __init__.py  admin_router.py  ai_file_management_router.py  ai_router.py  content_router.py  dev_util_router.py  faiss_router.py  file_router.py  language_router.py  oauth_router.py  perference_router.py  preference_router.py  search_router.py  session_router.py  setting_router.py  token_validation_router.py  topic_router.py  user_router.py
pbl2/api/schemas/: admin_schemas.py  file_schema.py  language_schema.py  preference_schemas.py  session_schema.py  token_schema.py  topic_schema.py  user_schema.py
pbl2/api/seed/: topic_seeder.py
pbl2/migrations/: env.py
pbl2/migrations/versions/: 00d5877dab25_.py  0cb6fdf659dd_.py  0da9b982ca71_.py  123f8c1e54d7_.py  1ebdd93ce9b5_.py  1fb201b0b28a_.py  209c4eab7125_.py  2467b9ddc825_.py  26600aa5f21a_.py  26a8493e497f_.py  2a7f863dba85_.py  2f285daffc72_.py  52815e6a8735_.py  559692c759bd_.py  55a9e693beb1_.py  612e8e27d830_.py  654b0caa9a39_.py  66a9de0662a9_.py  66bae0106c7f_.py  711dac42bd03_.py  7352a57db292_.py  73956ae032bb_.py  77a0d61021d4_.py  7c3be954bb8c_.py  7de771df59f0_.py  8ee0ad234621_.py  (+13 more)
(+14 files in other folders)
